<resources>
	<string name="pref_langSummary">Select language</string>
	<string name="pref_langDefaultValue" translatable="false">English</string>
	<string name="pref_hcPortTitle">Edit Head Controller port</string>
	<string name="pref_hcPortDefault" translatable="false">8080</string>

	<string name="appName" translatable="false">SHS</string>
	<string name="applicationTitle">SHS Mobile Client</string>
	<string name="empty" translatable="false"/>
	<string name="OK">OK</string>
	<string name="cancel">Cancel</string>
	<string name="accept">Accept</string>
	<string name="testText">Test text</string>
	<string name="open">Open</string>
	<string name="close">Close</string>
	<string name="dashboard">Dashboard</string>
	<string name="persons">Persons</string>
	<string name="indications">Indications</string>
	<string name="bills">Bills</string>
	<string name="meters">Meters</string>
	<string name="settings">Settings</string>
	<string name="hcNotAvailable">Head controller not available. Check connection</string>
	<string name="pref_bugReportTitle">Send bug report or suggests</string>
	<string name="pref_bugReportSummary">Report technical issues or suggest new features</string>
	<string name="pref_hcAddressTitle">Edit Head Controller IP address</string>
	<string name="pref_buildNumber">Build number</string>
	<string name="language">Language</string>
	<string name="hotWater">Hot water</string>
	<string name="coldWater">Cold water</string>
	<string name="gas">Gas</string>
	<string name="electricity">Electricity</string>
	<string name="value">Value:</string>
	<string name="date">Date:</string>
	<string name="meter">Meter:</string>
	<string name="type">Type:</string>
	<string name="serialNumber">Serial number:</string>
	<string name="added">Added:</string>
	<string name="menuDashboard">Dashboard</string>
	<string name="back">Back</string>
	<string name="add">Add</string>
	<string name="testUserName">Artyom</string>
	<string name="testUserSurname">Motozov</string>
	<string name="serialNumberHint">Enter serial number</string>
	<string name="selectResourceType">Select resource type:</string>
	<string name="personsCountLabel">Persons:</string>
	<string name="indicationsCountLabel">Indications:</string>
	<string name="metersCountLabel">Meters:</string>
	<string name="billsCountLabel">Bills:</string>
	<string name="costPerUnit">Price/Unit:</string>
	<string name="summary">Summary:</string>

	<string-array name="resourceTypeArray">
		<item>Electricity</item>
		<item>Hot water</item>
		<item>Cold water</item>
		<item>Gas</item>
	</string-array>

	<string-array name="pref_langEntries">
		<item>English</item>
		<item>Русский</item>
	</string-array>

	<string-array name="pref_langValues">
		<item>English</item>
		<item>Русский</item>
	</string-array>
</resources>
