<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
		xmlns:android="http://schemas.android.com/apk/res/android">
	<EditTextPreference
			android:key="pref_hc_address"
			android:title="@string/pref_hcAddressTitle"/>
	<EditTextPreference
			android:key="pref_hc_port"
			android:title="@string/pref_hcPortTitle"
			android:defaultValue="@string/pref_hcPortDefault"/>
	<ListPreference
			android:key="pref_lang"
			android:title="@string/language"
			android:summary="@string/pref_langSummary"
			android:entries="@array/pref_langEntries"
			android:entryValues="@array/pref_langValues"
			android:defaultValue="@string/pref_langDefaultValue"/>
	<Preference
			android:key="pref_bug_report"
			android:title="@string/pref_bugReportTitle"
			android:summary="@string/pref_bugReportSummary"/>
	<Preference
			android:title="@string/pref_buildNumber"
			android:summary="0.0.1-alpha"/>
</PreferenceScreen>