<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:id="@+id/mainFragmentContainer"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	<android.support.v4.widget.SwipeRefreshLayout
			android:id="@+id/mainSwipeRefreshLayout"
			android:layout_width="match_parent"
			android:layout_height="match_parent">
		<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">
			<TextView
					android:id="@+id/mainPersonCountLabel"
					android:text="@string/personsCountLabel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

			<TextView
					android:id="@+id/mainPersonCount"
					android:layout_toEndOf="@id/mainPersonCountLabel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

			<TextView
					android:id="@+id/mainIndicationCountLabel"
					android:text="@string/indicationsCountLabel"
					android:layout_below="@+id/mainPersonCountLabel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

			<TextView
					android:id="@+id/mainIndicationCount"
					android:layout_below="@id/mainPersonCount"
					android:layout_toEndOf="@id/mainIndicationCountLabel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

			<TextView
					android:id="@+id/mainResourceBillCountLabel"
					android:text="@string/billsCountLabel"
					android:layout_below="@id/mainIndicationCountLabel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

			<TextView
					android:id="@+id/mainResourceBillCount"
					android:layout_below="@id/mainIndicationCount"
					android:layout_toEndOf="@id/mainResourceBillCountLabel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

			<TextView
					android:id="@+id/mainResourceMeterCountLabel"
					android:text="@string/metersCountLabel"
					android:layout_below="@id/mainResourceBillCountLabel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

			<TextView
					android:id="@+id/mainResourceMeterCount"
					android:layout_below="@id/mainResourceBillCount"
					android:layout_toEndOf="@id/mainResourceMeterCountLabel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
		</RelativeLayout>
	</android.support.v4.widget.SwipeRefreshLayout>

	<android.support.design.widget.NavigationView
			android:id="@+id/navigation_menu"
			app:headerLayout="@layout/menu_header"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@color/white"
			app:itemTextColor="@color/darkgray"
			app:itemIconTint="@color/darkgray"
			app:menu="@menu/drawermenu"
			android:layout_gravity="start">

	</android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>